--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 # Database configuration
-DBURI = mongodb://localhost:27017/E-Commerce
+DBURI = mongodb+srv://esraasou78:6d1bjPZW2PAzh041@cluster0.2ichl.mongodb.net/ECommerce?retryWrites=true&w=majority&appName=Cluster0
 
 # JWT secret key
 BearerKey=Bearer
